# thechess

./: .hgignore  .hgtags  AUTHORS  CMakeLists.txt  Changelog  DatabaseMigration.txt  Doxyfile  INSTALL  LICENSE  Makefile  README  args  args-release  benchmark.py  benchmark1.py  compile.sh  debug.sh  doc-main  games-stats.sql  install.sh  locales_test.py  postgres-create-tables.sql  remove-old-tokens.sql  run.sh  split-pgn.py  style.sh  thechess-run  todo  valgrind.sh  wt_config.xml  xml2text.py
doc/: CMakeLists.txt
src/: Application.cpp  Application.hpp  CMakeLists.txt  Kick.cpp  Kick.hpp  Notifier.cpp  Notifier.hpp  Options.cpp  Options.hpp  Path.cpp  Path.hpp  Planning.cpp  Planning.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  SharedBoardIndex.cpp  SharedBoardIndex.hpp  TaskTracker.cpp  TaskTracker.hpp  ThechessApplication.cpp  ThechessApplication.hpp  ThechessNotifier.cpp  ThechessNotifier.hpp  ThechessOptions.cpp  ThechessOptions.hpp  ThechessServer.cpp  ThechessServer.hpp  ThechessSession.cpp  ThechessSession.hpp  config.hpp  log.cpp  log.hpp  notify.hpp  rand.cpp  rand.hpp  tests.cpp  tests.hpp  thechess-global.hpp  (+8 more)
src/chess/: Board.cpp  Board.hpp  BoardIndex.cpp  BoardIndex.hpp  CachedMoves.cpp  CachedMoves.hpp  HalfMove.cpp  HalfMove.hpp  Moves.cpp  Moves.hpp  Piece.cpp  Piece.hpp  Square.cpp  Square.hpp  base64.cpp  board.cpp  board.hpp  cached_moves.cpp  cached_moves.hpp  field.cpp  field.hpp  func_chess_info.php  func_chess_logic.php  global.hpp  hex.cpp  hex.hpp  move.cpp  move.hpp  moves.cpp  moves.hpp  xy.cpp  xy.hpp
src/model/: BD.cpp  BD.hpp  CP.cpp  CP.hpp  Comment.cpp  Comment.hpp  Competition.cpp  Competition.hpp  CompetitionParameters.cpp  CompetitionParameters.hpp  CompetitionType.hpp  CookieSession.cpp  CookieSession.hpp  EloPlayer.cpp  EloPlayer.hpp  GP.cpp  GP.hpp  Game.cpp  Game.hpp  GameParameters.cpp  GameParameters.hpp  IpBan.cpp  IpBan.hpp  Object.cpp  Object.hpp  StagedCompetition.cpp  StagedCompetition.hpp  TCM.cpp  TCM.hpp  Team.cpp  Team.hpp  User.cpp  User.hpp  UserClassification.cpp  UserClassification.hpp  all.hpp  elo_player.cpp  elo_player.hpp  global.hpp  model.hpp  (+10 more)
src/utils/: PlainTextWritter.cpp  PlainTextWritter.hpp  rand.cpp  rand.hpp  text_edit.cpp  text_edit.hpp  time_intervals.cpp  time_intervals.hpp  utils.cpp  utils.hpp
src/widgets/: BoardWidget.cpp  BoardWidget.hpp  CPWidget.cpp  CPWidget.hpp  ClassificationWidget.cpp  ClassificationWidget.hpp  CompetitionCreateWidget.cpp  CompetitionCreateWidget.hpp  CompetitionListWidget.cpp  CompetitionListWidget.hpp  CompetitionParametersWidget.cpp  CompetitionParametersWidget.hpp  CompetitionWidget.cpp  CompetitionWidget.hpp  Footer.cpp  Footer.hpp  GPWidget.cpp  GPWidget.hpp  GameCountdown.cpp  GameCountdown.hpp  GameCreateWidget.cpp  GameCreateWidget.hpp  GameListWidget.cpp  GameListWidget.hpp  GameParametersWidget.cpp  GameParametersWidget.hpp  GameWidget.cpp  GameWidget.hpp  Header.cpp  Header.hpp  IntervalWidget.cpp  IntervalWidget.hpp  LoginWidget.cpp  LoginWidget.hpp  MainMenu.cpp  MainMenu.hpp  MainPage.cpp  MainPage.hpp  MainWidget.cpp  MainWidget.hpp  (+26 more)
src/widgets/chess/: BoardWidget.cpp  BoardWidget.hpp  LinksDialog.cpp  LinksDialog.hpp  MovesWidget.cpp  MovesWidget.hpp
(+131 files in other folders)
